--- a/index.html
+++ b/index.html
@@ -156,12 +156,12 @@
               <div class="pagesSlider-container flex flex-space-between">
                 <div class="slider-arrow pagesSlider-prev">
                   <svg class="icon">
-                    <use xlink:href="/images/sprites.svg#arr"></use>
+                    <use xlink:href="images/sprites.svg#arr"></use>
                   </svg>
                 </div>
                 <div class="slider-arrow pagesSlider-next">
                   <svg class="icon">
-                    <use xlink:href="/images/sprites.svg#arr"></use>
+                    <use xlink:href="images/sprites.svg#arr"></use>
                   </svg>
                 </div>
               </div>
@@ -177,13 +177,13 @@
               <p class="footer-holder__text">Powerful Freelance Marketplace System with ability to change the Users (Freelancers & Clients)</p>
               <div class="footer-holder__icons flex flex-center-vertical flex-space-between"><a class="footer-holder__icon" href="">
                   <svg>
-                    <use xlink:href="/images/sprites.svg#inst"></use>
+                    <use xlink:href="images/sprites.svg#inst"></use>
                   </svg></a><a class="footer-holder__icon tw" href="">
                   <svg>
-                    <use xlink:href="/images/sprites.svg#tw"></use>
+                    <use xlink:href="images/sprites.svg#tw"></use>
                   </svg></a><a class="footer-holder__icon" href="">
                   <svg>
-                    <use xlink:href="/images/sprites.svg#fb"></use>
+                    <use xlink:href="images/sprites.svg#fb"></use>
                   </svg></a></div>
             </div>
             <div class="footer-holder__wrap"><small class="footer-holder__title">For Clients</small>
@@ -204,15 +204,15 @@
               <ul>
                 <li><a class="link" href="">Kenya
                     <svg>
-                      <use xlink:href="/images/sprites.svg#point"></use>
+                      <use xlink:href="images/sprites.svg#point"></use>
                     </svg></a></li>
                 <li><a class="link" href="tel:25470000000">+25470000000
                     <svg>
-                      <use xlink:href="/images/sprites.svg#phone"></use>
+                      <use xlink:href="images/sprites.svg#phone"></use>
                     </svg></a></li>
                 <li><a class="link" href="mailto:bluelance@gmail.com">bluelance@gmail.com
                     <svg>
-                      <use xlink:href="/images/sprites.svg#mail"></use>
+                      <use xlink:href="images/sprites.svg#mail"></use>
                     </svg></a></li>
               </ul>
             </div>
